kubernetes/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer          
          image: kafkatranform-producer:latest
          imagePullPolicy: Never  # Use local image
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          # No health checks needed for producer as it's a continuous process
      restartPolicy: Always
