kubernetes/transformer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transformer
  template:
    metadata:
      labels:
        app: transformer
    spec:
      containers:
        - name: transformer
          image: kafkatranform-transformer:latest
          imagePullPolicy: Never  # Use local image
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      restartPolicy: Always
